plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'  // 3.5.3에서 변경
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.planup'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//JWT 관련 의존성
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// AWS S3 의존성
	implementation 'software.amazon.awssdk:s3:2.21.29'
	implementation 'software.amazon.awssdk:auth:2.21.29'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// email 발송
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// 카카오 API 호출용 (HTTP 클라이언트)
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
}